# LinuxDevelopment2023

./: README.md
01_TerminalProject/: Makefile  Show.c
02_Multifile/: Makefile  prog.c
03_Text/: randomize.sh
04_Debugging/: Makefile  gdb_100_100_3  gdb_1_12  range.c
05_Regexps/: Makefile  esub.c
06_TracingFencing/: Makefile  libprotect.c  move  move.c  test1.sh  test2.sh  test3.sh  test4.sh  test5.sh  test6.sh
07_Environmental/: Makefile.am  configure.ac  rhasher.c
08_I18n/: Makefile.am  configure.ac  guess.c  ru.po
08_I18n/po/: Makefile.am  POTFILES.in  guess.pot  ru.po
08_I18n/src/: Makefile.am  guess.c
09_PatchDiff/: Makefile  maze.c  maze1.patch  maze2.patch  maze3.patch
10_Testing/: Makefile.am  configure.ac
10_Testing/src/: Makefile.am  buf.h  libbuf.c
10_Testing/tests/: Makefile.am  clear_test.c  grow_test.c  init_test.c  master_test.h  pop_test.c  push_test.c
11_Documenting/: Doxyfile.in  Makefile.am  README.md  configure.ac  guess.c  guess.md.in  guess.pot  ru.po
